--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,33 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <group android:checkableBehavior="single">
-        <item android:id="@+id/nav_camera" android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
-        <item android:id="@+id/nav_gallery" android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item android:id="@+id/nav_slideshow" android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item android:id="@+id/nav_manage" android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
-    </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item android:id="@+id/nav_share" android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item android:id="@+id/nav_send" android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
     <item android:title="Sources">
         <menu>
-            <item android:id="@+id/source_all" android:icon="@drawable/ic_menu_share"
+            <item android:id="@+id/source_all" android:icon="@drawable/ic_cracked_ground"
                 android:title="Fetch all" />
-            <item android:id="@+id/source_medium" android:icon="@drawable/ic_menu_send"
+            <item android:id="@+id/source_medium" android:icon="@drawable/ic_cracked_ground"
                 android:title="Fetch from medium" />
-            <item android:id="@+id/sort_time" android:icon="@drawable/ic_menu_manage"
-                android:title="Sort by time" />
+            <item android:id="@+id/source_big" android:icon="@drawable/ic_cracked_ground"
+                android:title="Fetch big seisms" />
+            <item android:id="@+id/source_significant" android:icon="@drawable/ic_cracked_ground"
+                android:title="Fetch significant seisms" />
         </menu>
     </item>
 
