--- a/app/src/main/res/layout/seism_item_layout.xml
+++ b/app/src/main/res/layout/seism_item_layout.xml
@@ -4,13 +4,22 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <ImageView
-        android:id="@+id/seism_intensity_icon"
+
+    <TextView
+        android:id="@+id/seism_intensity_number"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_gravity="center_vertical"
+        android:fontFamily="sans-serif-condensed"
         android:padding="10dp"
-        />
+        android:text="1"
+        android:textAlignment="center"
+        android:textColor="@android:color/holo_red_dark"
+        android:shadowColor="#000000"
+        android:shadowRadius="2"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        android:typeface="sans" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
